# FastApi_task4

./: db.sqlite3  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: core.py  errors.py  main.py
app/db/: database.py
app/domain/: __init__.py  errors.py  ports.py
app/domain/use_cases/: __init__.py  blog.py
app/repositories/: base.py  category.py  comment.py  location.py  post.py  user.py
app/routers/: categories.py  comments.py  locations.py  posts.py  users.py  utils.py
app/use_cases/: __init__.py  blog.py
blogicum_fastapi_min.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
