[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blogicum-fastapi-min"
version = "0.1.0"
description = "Minimal FastAPI CRUD for Blogicum models"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "SQLAlchemy>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uvicorn]
factory = false
